@@ -15,22 +15,12 @@
  */
 package org.tinymediamanager.core.movie;
 
-import java.io.ByteArrayInputStream;
-import java.io.FileOutputStream;
-import java.io.IOException;
-import java.io.InputStream;
-import java.io.InterruptedIOException;
+import java.io.*;
 import java.nio.file.DirectoryStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.Paths;
-import java.util.ArrayList;
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.List;
-import java.util.Locale;
-import java.util.Set;
-import java.util.TreeSet;
+import java.util.*;
 import java.util.regex.Matcher;
 import java.util.stream.Collectors;
 import java.util.stream.Stream;
@@ -39,21 +29,15 @@ import org.apache.commons.io.IOUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.tinymediamanager.core.IFileNaming;
-import org.tinymediamanager.core.ImageCache;
-import org.tinymediamanager.core.MediaFileHelper;
-import org.tinymediamanager.core.MediaFileType;
-import org.tinymediamanager.core.ScraperMetadataConfig;
-import org.tinymediamanager.core.Settings;
-import org.tinymediamanager.core.Utils;
+import org.tinymediamanager.core.*;
 import org.tinymediamanager.core.entities.MediaFile;
 import org.tinymediamanager.core.movie.entities.Movie;
 import org.tinymediamanager.core.movie.entities.MovieSet;
-import org.tinymediamanager.core.movie.filenaming.IMovieSetFileNaming;
-import org.tinymediamanager.core.tasks.ImageCacheTask;
+import org.tinymediamanager.core.movie.filenaming.*;
 import org.tinymediamanager.core.tasks.MediaFileInformationFetcherTask;
 import org.tinymediamanager.core.threading.TmmTaskManager;
 import org.tinymediamanager.scraper.entities.MediaArtwork;
+import org.tinymediamanager.scraper.entities.MediaLanguages;
 import org.tinymediamanager.scraper.http.Url;
 
 /**
@@ -65,11 +49,11 @@ public class MovieSetArtworkHelper {
   private static final Logger              LOGGER                      = LoggerFactory.getLogger(MovieSetArtworkHelper.class);
 
   private static final List<MediaFileType> SUPPORTED_ARTWORK_TYPES     = Arrays.asList(MediaFileType.POSTER, MediaFileType.FANART,
-      MediaFileType.BANNER, MediaFileType.LOGO, MediaFileType.CLEARLOGO, MediaFileType.CLEARART, MediaFileType.THUMB, MediaFileType.DISC);
+      MediaFileType.BANNER, MediaFileType.CLEARLOGO, MediaFileType.CLEARART, MediaFileType.THUMB, MediaFileType.DISC);
   private static final String[]            SUPPORTED_ARTWORK_FILETYPES = { "jpg", "png", "tbn", "webp" };
 
   private MovieSetArtworkHelper() {
-    // hide default constructor for utility classes
+    throw new IllegalAccessError();
   }
 
   /**
@@ -122,7 +106,7 @@ public class MovieSetArtworkHelper {
           return false;
         }
         return true;
-      }).collect(Collectors.toList());
+      }).toList();
 
       if (mediaFiles.isEmpty()) {
         continue;
@@ -189,8 +173,7 @@ public class MovieSetArtworkHelper {
 
     // re-create the image cache on all new files
     if (!needed.isEmpty() && Settings.getInstance().isImageCache()) {
-      ImageCacheTask task = new ImageCacheTask(new ArrayList<>(needed));
-      TmmTaskManager.getInstance().addUnnamedTask(task);
+      needed.forEach(ImageCache::cacheImageAsync);
     }
 
     // and assign it to the movie set
@@ -255,7 +238,7 @@ public class MovieSetArtworkHelper {
     }
 
     List<Path> paths = new ArrayList<>();
-    String movieSetName = movieSet.getTitleForStorage();
+    String movieSetName = getMovieSetTitleForStorage(movieSet);
 
     for (IMovieSetFileNaming fileNaming : filenamings) {
       if (fileNaming.getFolderLocation() == IMovieSetFileNaming.Location.KODI_STYLE_FOLDER) {
@@ -305,7 +288,14 @@ public class MovieSetArtworkHelper {
           }
 
           // second, try the Kodi style
-          movieSetName = movieSet.getTitleForStorage();
+          movieSetName = getMovieSetTitleForStorage(movieSet, "_");
+
+          if (isMediaFileInArtworkFolder(movieSetName, artworkFolder, fileNaming, mediaFile)) {
+            return mediaFile;
+          }
+
+          // third, try the Emby style
+          movieSetName = getMovieSetTitleForStorage(movieSet, " ");
 
           if (isMediaFileInArtworkFolder(movieSetName, artworkFolder, fileNaming, mediaFile)) {
             return mediaFile;
@@ -349,7 +339,7 @@ public class MovieSetArtworkHelper {
    */
   private static void findArtworkInArtworkFolder(MovieSet movieSet) {
     String artworkFolder = MovieModuleManager.getInstance().getSettings().getMovieSetDataFolder();
-    if (StringUtils.isBlank(artworkFolder)) {
+    if (StringUtils.isAnyBlank(artworkFolder, movieSet.getTitle())) {
       return;
     }
 
@@ -359,65 +349,70 @@ public class MovieSetArtworkHelper {
 
     // a)
     for (MediaFileType type : SUPPORTED_ARTWORK_TYPES) {
-      for (String fileType : SUPPORTED_ARTWORK_FILETYPES) {
-        // old tmm style
-        String movieSetName = MovieRenamer.replaceInvalidCharacters(movieSet.getTitle());
+      // old tmm style
+      String movieSetName = MovieRenamer.replaceInvalidCharacters(movieSet.getTitle());
 
-        // also remove illegal separators
-        movieSetName = MovieRenamer.replacePathSeparators(movieSetName);
+      // also remove illegal separators
+      movieSetName = MovieRenamer.replacePathSeparators(movieSetName);
 
-        // replace multiple spaces with a single one
-        movieSetName = movieSetName.replaceAll(" +", " ").trim();
+      // replace multiple spaces with a single one
+      movieSetName = movieSetName.replaceAll(" +", " ").trim();
+      findArtworkForType(movieSet, artworkFolder, movieSetName, type);
 
-        String artworkFileName = movieSetName + "-" + type.name().toLowerCase(Locale.ROOT) + "." + fileType;
-        Path artworkFile = Paths.get(artworkFolder, artworkFileName);
-        if (Files.exists(artworkFile)) {
-          // add this artwork to the media files
-          MediaFile mediaFile = new MediaFile(artworkFile, type);
-          TmmTaskManager.getInstance().addUnnamedTask(new MediaFileInformationFetcherTask(mediaFile, movieSet, false));
-          movieSet.addToMediaFiles(mediaFile);
-        }
+      // Kodi style
+      movieSetName = getMovieSetTitleForStorage(movieSet, "_");
+      findArtworkForType(movieSet, artworkFolder, movieSetName, type);
 
-        // Kodi style
-        movieSetName = movieSet.getTitleForStorage();
-
-        artworkFileName = movieSetName + "-" + type.name().toLowerCase(Locale.ROOT) + "." + fileType;
-        artworkFile = Paths.get(artworkFolder, artworkFileName);
-        if (Files.exists(artworkFile)) {
-          // add this artwork to the media files
-          MediaFile mediaFile = new MediaFile(artworkFile, type);
-          TmmTaskManager.getInstance().addUnnamedTask(new MediaFileInformationFetcherTask(mediaFile, movieSet, false));
-          movieSet.addToMediaFiles(mediaFile);
-        }
-      }
+      // Emby style
+      movieSetName = getMovieSetTitleForStorage(movieSet, " ");
+      findArtworkForType(movieSet, artworkFolder, movieSetName, type);
     }
 
     // b)
     for (MediaFileType type : SUPPORTED_ARTWORK_TYPES) {
+      // old tmm style
+      String movieSetName = MovieRenamer.replaceInvalidCharacters(movieSet.getTitle());
+
+      // also remove illegal separators
+      movieSetName = MovieRenamer.replacePathSeparators(movieSetName);
+
+      // replace multiple spaces with a single one
+      movieSetName = movieSetName.replaceAll(" +", " ").trim();
+      findArtworkForType(movieSet, artworkFolder + File.separator + movieSetName, movieSetName, type);
+
+      // Kodi style
+      movieSetName = getMovieSetTitleForStorage(movieSet, "_");
+      findArtworkForType(movieSet, artworkFolder, movieSetName, type);
+
+      // Emby style
+      movieSetName = getMovieSetTitleForStorage(movieSet, " ");
+      findArtworkForType(movieSet, artworkFolder, movieSetName, type);
+    }
+  }
+
+  /**
+   * Find all existing artworks for the given {@link MediaFileType}
+   * 
+   * @param movieSet
+   *          the {@link MovieSet} to find the artwork for
+   * @param artworkFolder
+   *          the folder to search the artwork for
+   * @param basename
+   *          the basename of the movie set
+   * @param type
+   *          the {@link MediaFileType}
+   */
+  private static void findArtworkForType(MovieSet movieSet, String artworkFolder, String basename, MediaFileType type) {
+    if (StringUtils.isAnyBlank(artworkFolder, basename)) {
+      return;
+    }
+
+    List<IMovieSetFileNaming> fileNamings = getAllowedFileNamingsForMediaFileType(type, artworkFolder.contains(basename));
+    for (IMovieSetFileNaming fileNaming : fileNamings) {
       for (String fileType : SUPPORTED_ARTWORK_FILETYPES) {
-        // old tmm style
-        String movieSetName = MovieRenamer.replaceInvalidCharacters(movieSet.getTitle());
 
-        // also remove illegal separators
-        movieSetName = MovieRenamer.replacePathSeparators(movieSetName);
-
-        // replace multiple spaces with a single one
-        movieSetName = movieSetName.replaceAll(" +", " ").trim();
-
-        String artworkFileName = type.name().toLowerCase(Locale.ROOT) + "." + fileType;
-        Path artworkFile = Paths.get(artworkFolder, movieSetName, artworkFileName);
-        if (Files.exists(artworkFile)) {
-          // add this artwork to the media files
-          MediaFile mediaFile = new MediaFile(artworkFile, type);
-          TmmTaskManager.getInstance().addUnnamedTask(new MediaFileInformationFetcherTask(mediaFile, movieSet, false));
-          movieSet.addToMediaFiles(mediaFile);
-        }
-
-        // Kodi style
-        movieSetName = movieSet.getTitleForStorage();
-
-        artworkFileName = type.name().toLowerCase(Locale.ROOT) + "." + fileType;
-        artworkFile = Paths.get(artworkFolder, movieSetName, artworkFileName);
+        String artworkFileName = fileNaming.getFilename(basename, fileType);
+        Path artworkFile = Paths.get(artworkFolder, artworkFileName);
         if (Files.exists(artworkFile)) {
           // add this artwork to the media files
           MediaFile mediaFile = new MediaFile(artworkFile, type);
@@ -429,6 +424,73 @@ public class MovieSetArtworkHelper {
   }
 
   /**
+   * get all allowed {@link IMovieSetFileNaming}s for the given {@link MediaFileType}
+   * 
+   * @param type
+   *          the {@link MediaFileType} to get the allowed {@link IMovieSetFileNaming}s for
+   * @param inDedicatedFolder
+   *          indicator if we look for the dedicated movie set folder
+   * @return a {@link List} of all allowed {@link IMovieSetFileNaming}s
+   */
+  private static List<IMovieSetFileNaming> getAllowedFileNamingsForMediaFileType(MediaFileType type, boolean inDedicatedFolder) {
+    if (inDedicatedFolder) {
+      switch (type) {
+        case POSTER:
+          return List.of(MovieSetPosterNaming.KODI_POSTER, MovieSetPosterNaming.AUTOMATOR_POSTER);
+
+        case FANART:
+          return List.of(MovieSetFanartNaming.KODI_FANART, MovieSetFanartNaming.AUTOMATOR_FANART);
+
+        case BANNER:
+          return List.of(MovieSetBannerNaming.KODI_BANNER, MovieSetBannerNaming.AUTOMATOR_BANNER);
+
+        case CLEARART:
+          return List.of(MovieSetClearartNaming.KODI_CLEARART, MovieSetClearartNaming.AUTOMATOR_CLEARART);
+
+        case CLEARLOGO:
+        case LOGO:
+          return List.of(MovieSetClearlogoNaming.KODI_CLEARLOGO, MovieSetClearlogoNaming.AUTOMATOR_CLEARLOGO, MovieSetClearlogoNaming.KODI_LOGO,
+              MovieSetClearlogoNaming.AUTOMATOR_LOGO);
+
+        case DISC:
+          return List.of(MovieSetDiscartNaming.KODI_DISCART, MovieSetDiscartNaming.AUTOMATOR_DISCART, MovieSetDiscartNaming.KODI_DISC,
+              MovieSetDiscartNaming.AUTOMATOR_DISC);
+
+        case THUMB:
+          return List.of(MovieSetThumbNaming.KODI_THUMB, MovieSetThumbNaming.AUTOMATOR_THUMB, MovieSetThumbNaming.KODI_LANDSCAPE,
+              MovieSetThumbNaming.AUTOMATOR_LANDSCAPE);
+      }
+    }
+    else {
+      switch (type) {
+        case POSTER:
+          return List.of(MovieSetPosterNaming.MOVIESET_POSTER);
+
+        case FANART:
+          return List.of(MovieSetFanartNaming.MOVIESET_FANART);
+
+        case BANNER:
+          return List.of(MovieSetBannerNaming.MOVIESET_BANNER);
+
+        case CLEARART:
+          return List.of(MovieSetClearartNaming.MOVIESET_CLEARART);
+
+        case CLEARLOGO:
+        case LOGO:
+          return List.of(MovieSetClearlogoNaming.MOVIESET_CLEARLOGO, MovieSetClearlogoNaming.MOVIESET_LOGO);
+
+        case DISC:
+          return List.of(MovieSetDiscartNaming.MOVIESET_DISCART, MovieSetDiscartNaming.MOVIESET_DISC);
+
+        case THUMB:
+          return List.of(MovieSetThumbNaming.MOVIESET_THUMB, MovieSetThumbNaming.MOVIESET_LANDSCAPE);
+      }
+    }
+
+    return Collections.emptyList();
+  }
+
+  /**
    * find and assign movie set artwork in the movie folder
    * 
    * @param movieSet
@@ -437,6 +499,15 @@ public class MovieSetArtworkHelper {
    *          the movie to look for the movie set artwork
    */
   private static void findArtworkInMovieFolder(MovieSet movieSet, Movie movie) {
+    // old tmm style
+    String movieSetName = MovieRenamer.replaceInvalidCharacters(movieSet.getTitle());
+
+    // also remove illegal separators
+    movieSetName = MovieRenamer.replacePathSeparators(movieSetName);
+
+    // replace multiple spaces with a single one
+    movieSetName = movieSetName.replaceAll(" +", " ").trim();
+
     for (MediaFileType type : SUPPORTED_ARTWORK_TYPES) {
       // only if there is not yet any artwork assigned
       if (!movieSet.getMediaFiles(type).isEmpty()) {
@@ -444,8 +515,19 @@ public class MovieSetArtworkHelper {
       }
 
       for (String fileType : SUPPORTED_ARTWORK_FILETYPES) {
+        // movieset-type.ext
         String artworkFileName = "movieset-" + type.name().toLowerCase(Locale.ROOT) + "." + fileType;
         Path artworkFile = movie.getPathNIO().resolve(artworkFileName);
+        if (Files.exists(artworkFile)) {
+          // add this artwork to the media files
+          MediaFile mediaFile = new MediaFile(artworkFile, type);
+          TmmTaskManager.getInstance().addUnnamedTask(new MediaFileInformationFetcherTask(mediaFile, movieSet, false));
+          movieSet.addToMediaFiles(mediaFile);
+        }
+
+        // <movie set name>-type.ext
+        artworkFileName = movieSetName + "-" + type.name().toLowerCase(Locale.ROOT) + "." + fileType;
+        artworkFile = movie.getPathNIO().resolve(artworkFileName);
         if (Files.exists(artworkFile)) {
           // add this artwork to the media files
           MediaFile mediaFile = new MediaFile(artworkFile, type);
@@ -482,9 +564,6 @@ public class MovieSetArtworkHelper {
     }
 
     // works now for single & multimovie
-    if (config.contains(MovieSetScraperMetadataConfig.LOGO)) {
-      setBestArtwork(movieSet, artwork, MediaArtwork.MediaArtworkType.LOGO);
-    }
     if (config.contains(MovieSetScraperMetadataConfig.CLEARLOGO)) {
       setBestArtwork(movieSet, artwork, MediaArtwork.MediaArtworkType.CLEARLOGO);
     }
@@ -520,63 +599,62 @@ public class MovieSetArtworkHelper {
    *          the artwork type
    * @param sizeOrder
    *          the preferred size
-   * @param language
-   *          the preferred language
    * @return the found artwork or null
    */
-  private static List<MediaArtwork> sortArtwork(List<MediaArtwork> artwork, MediaArtwork.MediaArtworkType type, int sizeOrder, String language) {
-    List<MediaArtwork> sortedArtwork = new ArrayList<>();
+  private static List<MediaArtwork.ImageSizeAndUrl> sortArtworkUrls(List<MediaArtwork> artwork, MediaArtwork.MediaArtworkType type, int sizeOrder) {
+    List<MediaArtwork> artworkForType = new ArrayList<>(artwork.stream().filter(art -> art.getType() == type).toList());
 
-    // the right language and the right resolution
-    for (MediaArtwork art : artwork) {
-      if (!sortedArtwork.contains(art) && art.getType() == type && art.getLanguage().equals(language) && art.getSizeOrder() == sizeOrder) {
-        sortedArtwork.add(art);
-      }
+    if (artworkForType.isEmpty()) {
+      return Collections.emptyList();
     }
 
-    // the right language and down to 2 resolutions lower (if language has priority)
-    if (MovieModuleManager.getInstance().getSettings().isImageLanguagePriority()) {
-      int counter = 1;
-      int newOrder = sizeOrder;
-      while (counter <= 2) {
-        newOrder = newOrder / 2;
+    List<MediaArtwork.ImageSizeAndUrl> sortedArtwork = new ArrayList<>();
 
-        for (MediaArtwork art : artwork) {
-          if (art.getType() == type && art.getLanguage().equals(language) && art.getSizeOrder() == newOrder) {
-            sortedArtwork.add(art);
+    if (sizeOrder == 0) {
+      // we do not have any sizeOrder -> we're sorting an artwork without a setting. So pre-sort by biggest artwork first
+      artworkForType.sort((o1, o2) -> Integer.compare(o2.getBiggestArtwork().getWidth(), o1.getBiggestArtwork().getWidth()));
+    }
+
+    List<MediaLanguages> languages = MovieSettings.getInstance().getImageScraperLanguages();
+
+    // get the artwork in the chosen language priority
+    for (MediaLanguages language : languages) {
+      // the right language and the right resolution
+      for (MediaArtwork art : artworkForType.stream().filter(art -> art.getLanguage().equals(language.getLanguage())).toList()) {
+        for (MediaArtwork.ImageSizeAndUrl imageSizeAndUrl : art.getImageSizes()) {
+          if (imageSizeAndUrl.getSizeOrder() == sizeOrder && !sortedArtwork.contains(imageSizeAndUrl)) {
+            sortedArtwork.add(imageSizeAndUrl);
           }
         }
-        counter++;
       }
     }
 
-    // the right resolution
-    for (MediaArtwork art : artwork) {
-      // only get artwork in desired resolution
-      if (!sortedArtwork.contains(art) && art.getType() == type && art.getSizeOrder() == sizeOrder) {
-        sortedArtwork.add(art);
-      }
-    }
-
-    // down to 2 resolutions lower
-    int counter = 1;
-    int newOrder = sizeOrder;
-    while (counter <= 2) {
-      newOrder = newOrder / 2;
-
-      for (MediaArtwork art : artwork) {
-        if (!sortedArtwork.contains(art) && art.getType() == type && art.getSizeOrder() == newOrder) {
-          sortedArtwork.add(art);
+    // do we want to take other resolution artwork?
+    if (MovieModuleManager.getInstance().getSettings().isImageScraperOtherResolutions()) {
+      int newOrder = MediaArtwork.MAX_IMAGE_SIZE_ORDER;
+      while (newOrder > 1) {
+        newOrder = newOrder / 2;
+        for (MediaLanguages language : languages) {
+          // the right language and the right resolution
+          // the right language and the right resolution
+          for (MediaArtwork art : artworkForType.stream().filter(art -> art.getLanguage().equals(language.getLanguage())).toList()) {
+            for (MediaArtwork.ImageSizeAndUrl imageSizeAndUrl : art.getImageSizes()) {
+              if (imageSizeAndUrl.getSizeOrder() == newOrder && !sortedArtwork.contains(imageSizeAndUrl)) {
+                sortedArtwork.add(imageSizeAndUrl);
+              }
+            }
+          }
         }
       }
-      counter++;
     }
 
-    // the first we find
-    if (sortedArtwork.isEmpty() && !artwork.isEmpty()) {
-      for (MediaArtwork art : artwork) {
-        if (!sortedArtwork.contains(art) && art.getType() == type) {
-          sortedArtwork.add(art);
+    // should we fall back to _any_ artwork?
+    if (MovieModuleManager.getInstance().getSettings().isImageScraperFallback()) {
+      for (MediaArtwork art : artworkForType) {
+        for (MediaArtwork.ImageSizeAndUrl imageSizeAndUrl : art.getImageSizes()) {
+          if (!sortedArtwork.contains(imageSizeAndUrl)) {
+            sortedArtwork.add(imageSizeAndUrl);
+          }
         }
       }
     }
@@ -589,15 +667,14 @@ public class MovieSetArtworkHelper {
    */
   private static void setBestPoster(MovieSet movieSet, List<MediaArtwork> artwork) {
     int preferredSizeOrder = MovieModuleManager.getInstance().getSettings().getImagePosterSize().getOrder();
-    String preferredLanguage = MovieModuleManager.getInstance().getSettings().getImageScraperLanguage().getLanguage();
 
     // sort artwork due to our preferences
-    List<MediaArtwork> sortedPosters = sortArtwork(artwork, MediaArtwork.MediaArtworkType.POSTER, preferredSizeOrder, preferredLanguage);
+    List<MediaArtwork.ImageSizeAndUrl> sortedPosters = sortArtworkUrls(artwork, MediaArtwork.MediaArtworkType.POSTER, preferredSizeOrder);
 
     // assign and download the poster
     if (!sortedPosters.isEmpty()) {
-      MediaArtwork foundPoster = sortedPosters.get(0);
-      movieSet.setArtworkUrl(foundPoster.getDefaultUrl(), MediaFileType.POSTER);
+      MediaArtwork.ImageSizeAndUrl foundPoster = sortedPosters.get(0);
+      movieSet.setArtworkUrl(foundPoster.getUrl(), MediaFileType.POSTER);
     }
   }
 
@@ -606,15 +683,39 @@ public class MovieSetArtworkHelper {
    */
   private static void setBestFanart(MovieSet movieSet, List<MediaArtwork> artwork) {
     int preferredSizeOrder = MovieModuleManager.getInstance().getSettings().getImageFanartSize().getOrder();
-    String preferredLanguage = MovieModuleManager.getInstance().getSettings().getImageScraperLanguage().getLanguage();
+
+    // according to the kodi specifications the fanart _should_ be without any text on it - so we try to get the text-less image (in the right
+    // resolution) first
+    // https://kodi.wiki/view/Artwork_types#fanart
+    MediaArtwork.ImageSizeAndUrl fanartWoText = null;
+
+    if (MovieModuleManager.getInstance().getSettings().isImageScraperPreferFanartWoText()) {
+      for (MediaArtwork art : artwork) {
+        if (art.getType() == MediaArtwork.MediaArtworkType.BACKGROUND && art.getLanguage().equals("-")) {
+          // right type
+          for (MediaArtwork.ImageSizeAndUrl imageSizeAndUrl : art.getImageSizes()) {
+            // right size
+            if (imageSizeAndUrl.getSizeOrder() == preferredSizeOrder) {
+              fanartWoText = imageSizeAndUrl;
+              break;
+            }
+          }
+        }
+      }
+    }
 
     // sort artwork due to our preferences
-    List<MediaArtwork> sortedFanarts = sortArtwork(artwork, MediaArtwork.MediaArtworkType.BACKGROUND, preferredSizeOrder, preferredLanguage);
+    List<MediaArtwork.ImageSizeAndUrl> sortedFanarts = sortArtworkUrls(artwork, MediaArtwork.MediaArtworkType.BACKGROUND, preferredSizeOrder);
+
+    // and insert the text-less in the front
+    if (fanartWoText != null) {
+      sortedFanarts.add(0, fanartWoText);
+    }
 
     // assign and download the fanart
     if (!sortedFanarts.isEmpty()) {
-      MediaArtwork foundfanart = sortedFanarts.get(0);
-      movieSet.setArtworkUrl(foundfanart.getDefaultUrl(), MediaFileType.FANART);
+      MediaArtwork.ImageSizeAndUrl foundfanart = sortedFanarts.get(0);
+      movieSet.setArtworkUrl(foundfanart.getUrl(), MediaFileType.FANART);
     }
   }
 
@@ -631,14 +732,12 @@ public class MovieSetArtworkHelper {
   private static void setBestArtwork(MovieSet movieSet, List<MediaArtwork> artwork, MediaArtwork.MediaArtworkType type) {
     // sort artwork due to our preferences
     int preferredSizeOrder = MovieModuleManager.getInstance().getSettings().getImageFanartSize().getOrder();
-    String preferredLanguage = MovieModuleManager.getInstance().getSettings().getImageScraperLanguage().getLanguage();
-    List<MediaArtwork> sortedArtworks = sortArtwork(artwork, type, preferredSizeOrder, preferredLanguage);
 
-    for (MediaArtwork art : sortedArtworks) {
-      if (art.getType() == type) {
-        movieSet.setArtworkUrl(art.getDefaultUrl(), MediaFileType.getMediaFileType(type));
-        break;
-      }
+    List<MediaArtwork.ImageSizeAndUrl> sortedArtworks = sortArtworkUrls(artwork, type, preferredSizeOrder);
+
+    if (!sortedArtworks.isEmpty()) {
+      MediaArtwork.ImageSizeAndUrl bestArtwork = sortedArtworks.get(0);
+      movieSet.setArtworkUrl(bestArtwork.getUrl(), MediaFileType.getMediaFileType(type));
     }
   }
 
@@ -771,9 +870,6 @@ public class MovieSetArtworkHelper {
     if (!MovieModuleManager.getInstance().getSettings().getDiscartFilenames().isEmpty() && movieSet.getMediaFiles(MediaFileType.DISC).isEmpty()) {
       return true;
     }
-    if (!MovieModuleManager.getInstance().getSettings().getLogoFilenames().isEmpty() && movieSet.getMediaFiles(MediaFileType.LOGO).isEmpty()) {
-      return true;
-    }
     if (!MovieModuleManager.getInstance().getSettings().getClearlogoFilenames().isEmpty()
         && movieSet.getMediaFiles(MediaFileType.CLEARLOGO).isEmpty()) {
       return true;
@@ -802,11 +898,6 @@ public class MovieSetArtworkHelper {
     // fanart
     if (movieSet.getMediaFiles(MediaFileType.FANART).isEmpty()) {
       setBestFanart(movieSet, artwork);
-    }
-
-    // logo
-    if (movieSet.getMediaFiles(MediaFileType.LOGO).isEmpty()) {
-      setBestArtwork(movieSet, artwork, MediaArtwork.MediaArtworkType.LOGO);
     }
 
     // clearlogo
@@ -982,12 +1073,21 @@ public class MovieSetArtworkHelper {
         return;
       }
 
+      // old tmm style
+      String movieSetName = MovieRenamer.replaceInvalidCharacters(movieSet.getTitle());
+
+      // also remove illegal separators
+      movieSetName = MovieRenamer.replacePathSeparators(movieSetName);
+
+      // replace multiple spaces with a single one
+      movieSetName = movieSetName.replaceAll(" +", " ").trim();
+
       List<IMovieSetFileNaming> movieFileNamings = fileNamings.stream()
           .filter(fileNaming -> fileNaming.getFolderLocation() == IMovieSetFileNaming.Location.MOVIE_FOLDER)
-          .collect(Collectors.toList());
+          .toList();
 
       for (IMovieSetFileNaming fileNaming : movieFileNamings) {
-        String filename = fileNaming.getFilename("", extension);
+        String filename = fileNaming.getFilename(movieSetName, extension);
 
         // write image for all movies
         for (Movie movie : movies) {
@@ -1055,11 +1155,8 @@ public class MovieSetArtworkHelper {
         fileNamings.addAll(MovieModuleManager.getInstance().getSettings().getMovieSetPosterFilenames());
         break;
 
-      case LOGO:
-        fileNamings.addAll(MovieModuleManager.getInstance().getSettings().getMovieSetLogoFilenames());
-        break;
-
       case CLEARLOGO:
+      case LOGO:
         fileNamings.addAll(MovieModuleManager.getInstance().getSettings().getMovieSetClearlogoFilenames());
         break;
 
@@ -1084,5 +1181,46 @@ public class MovieSetArtworkHelper {
     }
 
     return fileNamings;
+  }
+
+  /**
+   * cleans the movie set title according to the Kodi logic from https://github.com/xbmc/xbmc/blob/master/xbmc/Util.cpp#L919
+   *
+   * @param movieSet
+   *          the {@link MovieSet}
+   * @return the cleaned movie set title
+   */
+  public static String getMovieSetTitleForStorage(MovieSet movieSet) {
+    return getMovieSetTitleForStorage(movieSet, MovieModuleManager.getInstance().getSettings().getMovieSetTitleCharacterReplacement());
+  }
+
+  /**
+   * cleans the movie set title according to the Kodi logic from https://github.com/xbmc/xbmc/blob/master/xbmc/Util.cpp#L919
+   *
+   * @param movieSet
+   *          the {@link MovieSet}
+   * @param replacement
+   *          the replacement token
+   * @return the cleaned movie set title
+   */
+  public static String getMovieSetTitleForStorage(MovieSet movieSet, String replacement) {
+    // Note: Illegal characters in the movie set name are replaced with the chosen replacement
+    // eg "Mission: Impossible Collection" becomes "Mission_ Impossible Collection" (Kodi style)
+    // https://kodi.wiki/view/Movie_set_information_folder
+    String result = movieSet.getTitle();
+    result = result.replace("/", replacement);
+    result = result.replace("\\", replacement);
+    result = result.replace("?", replacement);
+    result = result.replace(":", replacement);
+    result = result.replace("*", replacement);
+    result = result.replace("\"", replacement);
+    result = result.replace("<", replacement);
+    result = result.replace(">", replacement);
+    result = result.replace("|", replacement);
+
+    // replace multiple spaces with a single one (and remove trailing ones)
+    result = result.replaceAll(" +", " ").trim();
+
+    return result;
   }
 }
