@@ -15,74 +15,104 @@
  */
 package org.tinymediamanager.core.tvshow.entities;
 
-import static org.tinymediamanager.core.Constants.ADDED_EPISODE;
-import static org.tinymediamanager.core.Constants.BANNER;
-import static org.tinymediamanager.core.Constants.BANNER_URL;
-import static org.tinymediamanager.core.Constants.FANART;
-import static org.tinymediamanager.core.Constants.FANART_URL;
-import static org.tinymediamanager.core.Constants.FIRST_AIRED;
-import static org.tinymediamanager.core.Constants.MEDIA_FILES;
-import static org.tinymediamanager.core.Constants.POSTER;
-import static org.tinymediamanager.core.Constants.POSTER_URL;
-import static org.tinymediamanager.core.Constants.REMOVED_EPISODE;
-import static org.tinymediamanager.core.Constants.SEASON;
-import static org.tinymediamanager.core.Constants.THUMB;
-import static org.tinymediamanager.core.Constants.THUMB_URL;
-
-import java.awt.Dimension;
 import java.beans.PropertyChangeListener;
 import java.util.ArrayList;
+import java.util.Collections;
+import java.util.Comparator;
 import java.util.Date;
+import java.util.HashSet;
 import java.util.LinkedHashSet;
 import java.util.List;
+import java.util.Objects;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.CopyOnWriteArrayList;
-import java.util.stream.Collectors;
 
-import org.tinymediamanager.core.AbstractModelObject;
+import org.jetbrains.annotations.NotNull;
 import org.tinymediamanager.core.MediaFileType;
+import org.tinymediamanager.core.entities.MediaEntity;
 import org.tinymediamanager.core.entities.MediaFile;
+import org.tinymediamanager.core.entities.MediaRating;
+import org.tinymediamanager.core.tvshow.TvShowHelpers;
 import org.tinymediamanager.core.tvshow.TvShowList;
 import org.tinymediamanager.core.tvshow.TvShowModuleManager;
 import org.tinymediamanager.core.tvshow.TvShowScraperMetadataConfig;
+import org.tinymediamanager.core.tvshow.connector.ITvShowSeasonConnector;
+import org.tinymediamanager.core.tvshow.connector.TvShowSeasonToEmbyConnector;
+import org.tinymediamanager.core.tvshow.filenaming.TvShowSeasonNfoNaming;
+import org.tinymediamanager.scraper.MediaMetadata;
 import org.tinymediamanager.scraper.entities.MediaArtwork.MediaArtworkType;
+
+import com.fasterxml.jackson.annotation.JsonProperty;
+import org.tinymediamanager.scraper.util.ListUtils;
+
+import static org.tinymediamanager.core.Constants.*;
 
 /**
  * The Class TvShowSeason.
  * 
  * @author Manuel Laggner
  */
-public class TvShowSeason extends AbstractModelObject implements Comparable<TvShowSeason> {
+public class TvShowSeason extends MediaEntity implements Comparable<TvShowSeason> {
+  @JsonProperty
+  private UUID                      tvShowDbId    = null;
 
-  private final TvShow                 tvShow;
-  private final List<TvShowEpisode>    episodes    = new CopyOnWriteArrayList<>();
-  private final PropertyChangeListener listener;
-  private final int                    season;
+  @JsonProperty
+  private final int                 season;
 
-  private String                       title       = "";
-  private Date                         lastWatched = null;
+  private TvShow                    tvShow        = null;
+  private final List<TvShowEpisode> episodes      = new CopyOnWriteArrayList<>();
+  private final List<TvShowEpisode> dummyEpisodes = new CopyOnWriteArrayList<>();
 
-  public TvShowSeason(int season, TvShow tvShow) {
+  private PropertyChangeListener    listener;
+
+  /**
+   * Instantiates a new tv show episode. To initialize the propertychangesupport after loading
+   */
+  public TvShowSeason(@JsonProperty("season") int season) {
+    // register for dirty flag listener
+    super();
+
     this.season = season;
+
+    init();
+  }
+
+  public TvShowSeason(int season, @NotNull TvShow tvShow) {
+    this(season);
+
     this.tvShow = tvShow;
+    this.tvShowDbId = tvShow.getDbId();
+  }
+
+  /**
+   * copy constructor
+   * 
+   * @param source
+   *          the other {@link TvShowSeason} to copy
+   */
+  public TvShowSeason(TvShowSeason source) {
+    super.merge(source);
+
+    this.tvShow = source.tvShow;
+    this.tvShowDbId = source.tvShowDbId;
+
+    this.season = source.season;
+
+    init();
+  }
+
+  private void init() {
     listener = evt -> {
-      if (evt.getSource() instanceof TvShowEpisode) {
-        TvShowEpisode episode = (TvShowEpisode) evt.getSource();
-
+      if (evt.getSource()instanceof TvShowEpisode episode) {
         switch (evt.getPropertyName()) {
-          case MEDIA_FILES:
-            firePropertyChange(MEDIA_FILES, null, evt.getNewValue());
-            break;
-
-          case SEASON:
+          case MEDIA_FILES -> firePropertyChange(MEDIA_FILES, null, evt.getNewValue());
+          case SEASON -> {
             if (episode.getSeason() != season) {
               removeEpisode(episode);
             }
-            break;
-
-          case FIRST_AIRED:
-            firePropertyChange(FIRST_AIRED, null, evt.getNewValue());
-            break;
+          }
+          case FIRST_AIRED -> firePropertyChange(FIRST_AIRED, null, evt.getNewValue());
         }
       }
     };
@@ -92,74 +122,147 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return season;
   }
 
+  @Override
+  public MediaFile getMainFile() {
+    return MediaFile.EMPTY_MEDIAFILE;
+  }
+
+  @Override
+  public Date getReleaseDate() {
+    return null;
+  }
+
   /**
    * checks whether the parent {@link TvShow} is locked
    * 
    * @return true/false
    */
+  @Override
   public boolean isLocked() {
     return getTvShow() == null || getTvShow().isLocked();
   }
 
-  public void setTitle(String newValue) {
-    String oldValue = this.title;
-    this.title = newValue;
-    firePropertyChange("title", oldValue, newValue);
-
-    // store the title inside the TV show itself
-    getTvShow().addSeasonTitle(season, newValue);
+  @Override
+  public MediaRating getRating() {
+    return MediaMetadata.EMPTY_RATING;
   }
 
-  public String getTitle() {
-    return this.title;
+  public void setTvShow(TvShow newValue) {
+    TvShow oldValue = this.tvShow;
+    this.tvShow = newValue;
+    this.tvShowDbId = newValue.getDbId();
+    firePropertyChange(TV_SHOW, oldValue, newValue);
   }
 
   public TvShow getTvShow() {
     return tvShow;
   }
 
+  public UUID getTvShowDbId() {
+    return tvShowDbId;
+  }
+
+  public void removeAllEpisodes() {
+    List<TvShowEpisode> removedEpisodes = new ArrayList<>(episodes);
+    removedEpisodes.addAll(dummyEpisodes);
+
+    episodes.clear();
+    dummyEpisodes.clear();
+
+    for (TvShowEpisode episode : removedEpisodes) {
+      episode.removePropertyChangeListener(listener);
+      firePropertyChange(REMOVED_EPISODE, null, episode);
+      firePropertyChange(FIRST_AIRED, null, getFirstAired());
+    }
+  }
+
+  boolean isEmpty() {
+    return episodes.isEmpty() && dummyEpisodes.isEmpty();
+  }
+
   public synchronized void addEpisode(TvShowEpisode episode) {
-    // do not add twice
-    if (episode == null || episodes.contains(episode)) {
+    // do not add empty episodes
+    if (episode == null) {
       return;
     }
 
-    // when adding a new episode, check:
-    for (TvShowEpisode e : episodes) {
-      // - if that is a dummy episode; do not add it if a the real episode is available
-      if (episode.isDummy() && ((episode.getEpisode() == e.getEpisode() && episode.getSeason() == e.getSeason())
-          || (episode.getDvdEpisode() > 0 && episode.getDvdEpisode() == e.getDvdEpisode() && episode.getDvdSeason() == e.getDvdSeason()))) {
-        return;
+    // to find out the delta (dummy)
+    List<TvShowEpisode> episodesForDisplayBefore = null;
+    if (TvShowModuleManager.getInstance().getSettings().isDisplayMissingEpisodes()) {
+      episodesForDisplayBefore = getEpisodesForDisplay();
+    }
+
+    if (episode.isDummy()) {
+      if (!dummyEpisodes.contains(episode)) {
+        dummyEpisodes.add(episode);
+        dummyEpisodes.sort(TvShowEpisode::compareTo);
       }
-      // - if that is a real episode; remove the corresponding dummy episode if available
-      if (!episode.isDummy() && e.isDummy() && ((episode.getEpisode() == e.getEpisode() && episode.getSeason() == e.getSeason())
-          || (episode.getDvdEpisode() > 0 && episode.getDvdEpisode() == e.getDvdEpisode() && episode.getDvdSeason() == e.getDvdSeason()))) {
-        tvShow.removeEpisode(e);
+    }
+    else {
+      if (!episodes.contains(episode)) {
+        episodes.add(episode);
+        episodes.sort(TvShowEpisode::compareTo);
       }
     }
 
-    episodes.add(episode);
-    episodes.sort(TvShowEpisode::compareTo);
     episode.addPropertyChangeListener(listener);
-    firePropertyChange(ADDED_EPISODE, null, episodes);
-    firePropertyChange(FIRST_AIRED, null, getFirstAired());
+
+    // only fire the event when this episode is displayed
+    List<TvShowEpisode> episodesForDisplayNow = getEpisodesForDisplay();
+    if (episodesForDisplayNow.contains(episode)) {
+      // upon the _first_ added episode, we do add the season itself
+      if (episodesForDisplayNow.size() == 1) {
+        firePropertyChange(ADDED_SEASON, null, this);
+      }
+
+      firePropertyChange(ADDED_EPISODE, null, episode);
+      firePropertyChange(FIRST_AIRED, null, getFirstAired());
+    }
+
+    if (TvShowModuleManager.getInstance().getSettings().isDisplayMissingEpisodes()) {
+      for (TvShowEpisode e : ListUtils.nullSafe(episodesForDisplayBefore)) {
+        if (!episodesForDisplayNow.contains(e)) {
+          firePropertyChange(REMOVED_EPISODE, null, e);
+          firePropertyChange(FIRST_AIRED, null, getFirstAired());
+        }
+      }
+    }
   }
 
   public void removeEpisode(TvShowEpisode episode) {
-    episodes.remove(episode);
+    if (episode == null) {
+      return;
+    }
+
+    // to find out the delta (dummy)
+    List<TvShowEpisode> episodesForDisplayBefore = episodesForDisplayBefore = getEpisodesForDisplay();
+
+    if (episode.isDummy()) {
+      dummyEpisodes.remove(episode);
+    }
+    else {
+      episodes.remove(episode);
+    }
+
     episode.removePropertyChangeListener(listener);
-    firePropertyChange(REMOVED_EPISODE, null, episodes);
-    firePropertyChange(FIRST_AIRED, null, getFirstAired());
+    if (episodesForDisplayBefore.contains(episode)) {
+      firePropertyChange(REMOVED_EPISODE, null, episode);
+      firePropertyChange(FIRST_AIRED, null, getFirstAired());
+    }
+
+    if (TvShowModuleManager.getInstance().getSettings().isDisplayMissingEpisodes()) {
+      List<TvShowEpisode> episodesForDisplayNow = getEpisodesForDisplay();
+      for (TvShowEpisode e : episodesForDisplayNow) {
+        if (!episodesForDisplayBefore.contains(e)) {
+          firePropertyChange(ADDED_EPISODE, null, e);
+          firePropertyChange(FIRST_AIRED, null, getFirstAired());
+        }
+      }
+    }
   }
 
   public List<TvShowEpisode> getEpisodes() {
-    List<TvShowEpisode> episodes = new ArrayList<>();
-    for (TvShowEpisode episode : this.episodes) {
-      if (!episode.isDummy()) {
-        episodes.add(episode);
-      }
-    }
-    return episodes;
+    return Collections.unmodifiableList(episodes);
   }
 
   /**
@@ -168,11 +271,18 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
    * @return the first aired date of the first episode or null
    */
   public Date getFirstAired() {
-    if (episodes.isEmpty()) {
-      return null;
+    Date firstAired = null;
+
+    for (TvShowEpisode episode : getEpisodesForDisplay()) {
+      if (firstAired == null) {
+        firstAired = episode.getFirstAired();
+      }
+      else if (episode.getFirstAired() != null && firstAired.after(episode.getFirstAired())) {
+        firstAired = episode.getFirstAired();
+      }
     }
 
-    return episodes.get(0).getFirstAired();
+    return firstAired;
   }
 
   /**
@@ -252,15 +362,45 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
   }
 
   public boolean isDummy() {
-    for (TvShowEpisode episode : episodes) {
-      if (!episode.isDummy()) {
-        return false;
-      }
-    }
-    return true;
+    return episodes.isEmpty();
   }
 
   public List<TvShowEpisode> getEpisodesForDisplay() {
+    List<TvShowEpisode> episodes = new ArrayList<>(getEpisodes());
+
+    // mix in unavailable episodes if the user wants to
+    if (TvShowModuleManager.getInstance().getSettings().isDisplayMissingEpisodes()) {
+      // build up a set which holds a string representing the S/E indicator
+      Set<String> availableEpisodes = new HashSet<>();
+
+      for (TvShowEpisode episode : episodes) {
+        if (episode.getSeason() > -1 && episode.getEpisode() > -1) {
+          availableEpisodes.add("A" + episode.getSeason() + "." + episode.getEpisode());
+        }
+        if (episode.getDvdSeason() > -1 && episode.getDvdEpisode() > -1) {
+          availableEpisodes.add("D" + episode.getSeason() + "." + episode.getEpisode());
+        }
+        if (episode.getAbsoluteNumber() > -1) {
+          availableEpisodes.add("ABS" + episode.getAbsoluteNumber());
+        }
+      }
+
+      // and now mix in unavailable ones
+      for (TvShowEpisode episode : dummyEpisodes) {
+        if (!TvShowHelpers.shouldAddDummyEpisode(episode)) {
+          continue;
+        }
+
+        if (!availableEpisodes.contains("A" + episode.getSeason() + "." + episode.getEpisode())
+            && !availableEpisodes.contains("D" + episode.getDvdSeason() + "." + episode.getDvdEpisode())
+            && !availableEpisodes.contains("ABS" + episode.getAbsoluteNumber())) {
+          episodes.add(episode);
+        }
+      }
+    }
+
+    episodes.sort(Comparator.comparingInt(TvShowEpisode::getEpisode));
+
     return episodes;
   }
 
@@ -272,6 +412,7 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return filesize;
   }
 
+  @Override
   public long getTotalFilesize() {
     long filesize = 0;
     for (TvShowEpisode episode : episodes) {
@@ -280,159 +421,37 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return filesize;
   }
 
-  public void setArtwork(MediaFile mediaFile) {
-    MediaArtworkType artworkType = MediaFileType.getMediaArtworkType(mediaFile.getType());
-    String oldValue = getArtworkFilename(artworkType);
-    String newValue = mediaFile.getFile().toString();
-
-    tvShow.setSeasonArtwork(season, mediaFile);
-
-    switch (artworkType) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER, oldValue, newValue);
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART, oldValue, newValue);
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER, oldValue, newValue);
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB, oldValue, newValue);
-        break;
-
-      default:
-        return;
-    }
-
-    for (TvShowEpisode episode : episodes) {
-      episode.setSeasonArtworkChanged(artworkType);
-    }
-  }
-
-  public void clearArtwork(MediaArtworkType artworkType) {
-    tvShow.clearSeasonArtwork(season, artworkType);
-
-    switch (artworkType) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER, null, "");
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART, null, "");
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER, null, "");
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB, null, "");
-        break;
-    }
-  }
-
-  public String getArtworkFilename(MediaArtworkType type) {
-    return tvShow.getSeasonArtwork(season, type);
-  }
-
-  public Dimension getArtworkSize(MediaArtworkType type) {
-    return tvShow.getSeasonArtworkSize(season, type);
-  }
-
   /**
-   * <b>PHYSICALLY</b> deletes all {@link MediaFile}s of the given type
-   *
-   * @param type
-   *          the {@link MediaArtworkType} for all {@link MediaFile}s to delete
+   * gets all {@link MediaFile}s recursively (season + episodes)
+   * 
+   * @return a {@link List} of all {@link MediaFile}s
    */
-  public void deleteArtworkFiles(MediaArtworkType type) {
-    tvShow.deleteSeasonArtworkFiles(season, type);
+  public List<MediaFile> getMediaFilesRecursive() {
+    Set<MediaFile> unique = new LinkedHashSet<>(super.getMediaFiles());
 
-    switch (type) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER, null, "");
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART, null, "");
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER, null, "");
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB, null, "");
-        break;
-    }
-  }
-
-  public void setArtworkUrl(String newValue, MediaArtworkType artworkType) {
-    String oldValue = getArtworkUrl(artworkType);
-    tvShow.setSeasonArtworkUrl(season, newValue, artworkType);
-
-    switch (artworkType) {
-      case SEASON_POSTER:
-        firePropertyChange(POSTER_URL, oldValue, newValue);
-        break;
-
-      case SEASON_FANART:
-        firePropertyChange(FANART_URL, oldValue, newValue);
-        break;
-
-      case SEASON_BANNER:
-        firePropertyChange(BANNER_URL, oldValue, newValue);
-        break;
-
-      case SEASON_THUMB:
-        firePropertyChange(THUMB_URL, oldValue, newValue);
-        break;
-
-      default:
-        return;
-    }
-
-    for (TvShowEpisode episode : episodes) {
-      episode.setSeasonArtworkChanged(artworkType);
-    }
-  }
-
-  public void removeArtworkUrl(MediaArtworkType artworkType) {
-    tvShow.clearSeasonArtworkUrl(season, artworkType);
-  }
-
-  public String getArtworkUrl(MediaArtworkType type) {
-    return tvShow.getSeasonArtworkUrl(season, type);
-  }
-
-  public void downloadArtwork(MediaArtworkType artworkType) {
-    tvShow.downloadSeasonArtwork(season, artworkType);
-  }
-
-  public List<MediaFile> getMediaFiles() {
-    ArrayList<MediaFile> mfs = new ArrayList<>();
-    Set<MediaFile> unique = new LinkedHashSet<>(mfs);
     for (TvShowEpisode episode : episodes) {
       unique.addAll(episode.getMediaFiles());
     }
-    mfs.addAll(unique);
-    return mfs;
+
+    return new ArrayList<>(unique);
   }
 
-  public List<MediaFile> getMediaFiles(MediaFileType type) {
-    ArrayList<MediaFile> mfs = new ArrayList<>();
-    Set<MediaFile> unique = new LinkedHashSet<>(mfs);
+  /**
+   * gets all {@link MediaFile}s recursively for the given type (season + episodes)
+   *
+   * @return a {@link List} of all {@link MediaFile}s
+   */
+  public List<MediaFile> getMediaFilesRecursive(MediaFileType type) {
+    Set<MediaFile> unique = new LinkedHashSet<>(super.getMediaFiles(type));
+
     for (TvShowEpisode episode : episodes) {
       unique.addAll(episode.getMediaFiles(type));
     }
-    mfs.addAll(unique);
-    return mfs;
+
+    return new ArrayList<>(unique);
   }
 
+  @Override
   public boolean isNewlyAdded() {
     for (TvShowEpisode episode : episodes) {
       if (episode.isNewlyAdded()) {
@@ -442,44 +461,66 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
     return false;
   }
 
+  @Override
+  public void saveToDb() {
+    TvShowModuleManager.getInstance().getTvShowList().persistSeason(this);
+  }
+
+  @Override
+  public void callbackForGatheredMediainformation(MediaFile mediaFile) {
+    // nothing to do
+  }
+
+  public void writeNfo() {
+    ITvShowSeasonConnector connector;
+
+    // only write the NFO if there is at least one episode existing (or the setting activated)
+    if (!episodes.isEmpty() || TvShowModuleManager.getInstance().getSettings().isCreateMissingSeasonItems()) {
+      List<TvShowSeasonNfoNaming> nfoNamings = TvShowModuleManager.getInstance().getSettings().getSeasonNfoFilenames();
+      if (!nfoNamings.isEmpty()) {
+        connector = switch (TvShowModuleManager.getInstance().getSettings().getTvShowConnector()) {
+          default -> new TvShowSeasonToEmbyConnector(this);
+        };
+
+        connector.write(nfoNamings);
+
+        firePropertyChange(HAS_NFO_FILE, false, true);
+      }
+    }
+  }
+
+  @Override
+  public void callbackForWrittenArtwork(MediaArtworkType type) {
+    // nothing to do
+  }
+
+  @Override
+  protected Comparator<MediaFile> getMediaFileComparator() {
+    return null;
+  }
+
   /**
    * Gets the images to cache.
    *
    * @return the images to cache
    */
+  @Override
   public List<MediaFile> getImagesToCache() {
     // get files to cache
-    return getMediaFiles().stream().filter(MediaFile::isGraphic).collect(Collectors.toList());
-  }
-
-  public Date getLastWatched() {
-    return lastWatched;
-  }
-
-  public void setLastWatched(Date lastWatched) {
-    this.lastWatched = lastWatched;
+    return getMediaFiles().stream().filter(MediaFile::isGraphic).toList();
   }
 
   public Object getValueForMetadata(TvShowScraperMetadataConfig metadataConfig) {
+    return switch (metadataConfig) {
+      case TITLE, SEASON_NAMES -> getTitle();
+      case SEASON_OVERVIEW -> getPlot();
+      case SEASON_POSTER -> getArtworkFilename(MediaFileType.SEASON_POSTER);
+      case SEASON_FANART -> getArtworkFilename(MediaFileType.SEASON_FANART);
+      case SEASON_BANNER -> getArtworkFilename(MediaFileType.SEASON_BANNER);
+      case SEASON_THUMB -> getArtworkFilename(MediaFileType.SEASON_THUMB);
+      default -> null;
+    };
 
-    switch (metadataConfig) {
-      case TITLE:
-        return getTitle();
-
-      case SEASON_POSTER:
-        return getArtworkFilename(MediaArtworkType.SEASON_POSTER);
-
-      case SEASON_FANART:
-        return getArtworkFilename(MediaArtworkType.SEASON_FANART);
-
-      case SEASON_BANNER:
-        return getArtworkFilename(MediaArtworkType.SEASON_BANNER);
-
-      case SEASON_THUMB:
-        return getArtworkFilename(MediaArtworkType.SEASON_THUMB);
-    }
-
-    return null;
   }
 
   @Override
@@ -488,5 +529,24 @@ public class TvShowSeason extends AbstractModelObject implements Comparable<TvSh
       return getTvShow().getTitle().compareTo(o.getTvShow().getTitle());
     }
     return Integer.compare(getSeason(), o.getSeason());
+  }
+
+  @Override
+  public boolean equals(Object o) {
+    if (this == o) {
+      return true;
+    }
+
+    if (o == null || getClass() != o.getClass()) {
+      return false;
+    }
+
+    TvShowSeason that = (TvShowSeason) o;
+    return season == that.season && Objects.equals(tvShow, that.tvShow);
+  }
+
+  @Override
+  public int hashCode() {
+    return Objects.hash(tvShow, season);
   }
 }
